--- a/scrapers/scrapy.cfg
+++ b/scrapers/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = stockscrape.settings
+default = scrapers.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = stockscrape
+project = scrapers
